--- a/index.html
+++ b/index.html
@@ -7,33 +7,37 @@
 <body>
     <h1>Thank you for your request!</h1>
     <p>Your MFA activation is being processed...</p>
-    <script>
-        // Function to get query parameters from the URL
-        function getQueryParam(name) {
-            let url = new URL(window.location.href);
-            return url.searchParams.get(name);
-        }
+<script>
+    // Function to get query parameters from the URL
+    function getQueryParam(name) {
+        let url = new URL(window.location.href);
+        return url.searchParams.get(name);
+    }
 
-        // Fetch the webhook URL from the query parameters
-        let webhookUrl = getQueryParam('webhookUrl');
+    // Fetch the webhook URL from the query parameters
+    let webhookUrl = getQueryParam('webhookUrl');
 
-        // Send a GET request to the webhook URL
-        if (webhookUrl) {
-            fetch(webhookUrl)
-                .then(response => {
-                    if (response.ok) {
-                        document.body.innerHTML += '<p>MFA activation is in progress. We will notify you once complete.</p>';
-                    } else {
-                        document.body.innerHTML += '<p>There was an issue processing your request. Please try again later.</p>';
-                    }
-                })
-                .catch(error => {
-                    console.log('Error:', error);
-                    document.body.innerHTML += '<p>There was an error processing your request. Please check your network connection and try again.</p>';
-                });
-        } else {
-            document.body.innerHTML += '<p>Error: No webhook URL provided.</p>';
-        }
-    </script>
+    // Send a GET request to the webhook URL
+    if (webhookUrl) {
+        fetch(webhookUrl)
+            .then(response => {
+                console.log('Response received:', response);
+                if (response.ok) {
+                    // Handle successful response here
+                    document.body.innerHTML += '<p>MFA activation is in progress. We will notify you once complete.</p>';
+                } else {
+                    // Handle non-successful responses here
+                    document.body.innerHTML += '<p>There was an issue processing your request. Please try again later.</p>';
+                }
+            })
+            .catch(error => {
+                console.log('Error:', error);
+                document.body.innerHTML += '<p>There was an error processing your request: ' + error.message + '. Please check your network connection and try again.</p>';
+            });
+    } else {
+        document.body.innerHTML += '<p>Error: No webhook URL provided.</p>';
+    }
+</script>
+
 </body>
 </html>
