--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         <!-- Embedded content area -->
         <div class="embedded">
-            <!-- Your Tango embedded code goes here -->
+            <iframe src="https://app.tango.us/app/embed/121b4b10-2323-4be1-91c3-ff384011431d?skipCover=false&defaultListView=false&skipBranding=true" style="min-height:640px" sandbox="allow-scripts allow-top-navigation-by-user-activation allow-popups allow-same-origin" security="restricted" title="Scheduling an Addigy Demo for Small Businesses: A Step-by-Step Process" width="100%" height="100%" referrerpolicy="strict-origin-when-cross-origin" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
         </div>
     </div>
     <div class="footer">
