--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             text-align: center;
         }
         .header {
-            background: #0056b3; /* Adjust the color to match your branding */
+            background: #ffffff;
             padding: 20px 0;
         }
         .logo {
-            max-width: 150px; /* Adjust based on your logo size */
+            max-width: 150px;
         }
         .content {
             margin: 20px;
