--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="img/webitlogo.jpg" alt="Logo" class="logo">
+        <img src="img/Outlook-5a55aepp.png" alt="Logo" class="logo">
     </div>
     <div class="content">
         <h1>Thank You for Activating Your Multi-Factor Authentication!</h1>
