--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         
         <!-- Embedded content area -->
         <div class="embedded">
-            <iframe src="https://app.tango.us/app/workflow/Office-365---End-User-MFA-Instructions-bb21352a8fc441af9dafe1024b0f30c0?skipCover=false&defaultListView=false&skipBranding=true" style="min-height:640px" sandbox="allow-scripts allow-top-navigation-by-user-activation allow-popups allow-same-origin" security="restricted" title="Scheduling an Addigy Demo for Small Businesses: A Step-by-Step Process" width="100%" height="100%" referrerpolicy="strict-origin-when-cross-origin" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
-        </div>
+<iframe src="
+https://app.tango.us/app/embed/bb21352a-8fc4-41af-9daf-e1024b0f30c0"
+style="min-height:640px" sandbox="allow-scripts allow-top-navigation-by-user-activation allow-popups allow-same-origin" security="restricted" title="Office 365 - End User MFA Instructions" width="100%" height="100%" referrerpolicy="strict-origin-when-cross-origin" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>        </div>
     </div>
     <div class="footer">
         © 2024 WEBIT Services. All rights reserved.
