--- a/index.html
+++ b/index.html
@@ -75,23 +75,30 @@
         console.log('UUID:', uuid);
 
         if (webhookUrl && user && uuid) {
+            const payload = { user, uuid };
+            console.log('Payload:', JSON.stringify(payload));
+
             fetch(webhookUrl, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ user, uuid })
+                body: JSON.stringify(payload)
             })
             .then(response => {
                 console.log('Response received:', response);
-                if (response.ok) {
-                    document.body.innerHTML += '<p>MFA activation is in progress. We will notify you once complete.</p>';
-                } else {
-                    throw new Error('Non-200 status code received: ' + response.status);
-                }
+                return response.json().then(data => {
+                    console.log('Response JSON:', data);
+                    if (response.ok) {
+                        document.body.innerHTML += '<p>MFA activation is in progress. We will notify you once complete.</p>';
+                    } else {
+                        throw new Error('Non-200 status code received: ' + response.status);
+                    }
+                });
             })
             .catch(error => {
                 console.log('Error:', error);
+                document.body.innerHTML += '<p>Error: ' + error.message + '</p>';
             });
         } else {
             console.error('Invalid Request:', { webhookUrl, user, uuid });
