--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         if (webhookUrl && user && uuid) {
             const payload = { user, uuid };
-            console.log('Payload:', JSON.stringify(payload));
+            console.log('body:', JSON.stringify(payload));
 
             fetch(webhookUrl, {
                 method: 'POST',
