--- a/index.html
+++ b/index.html
@@ -69,14 +69,26 @@
         const webhookUrl = getQueryParam('webhookUrl');
         const user = getQueryParam('user');
         const uuid = getQueryParam('uuid');
+        const timestamp = new Date().toISOString();
 
         console.log('Webhook URL:', webhookUrl);
         console.log('User:', user);
         console.log('UUID:', uuid);
 
         if (webhookUrl && user && uuid) {
-            const payload = { user, uuid };
-            console.log('body:', JSON.stringify(payload));
+            const payload = {
+                body: {
+                    user: user,
+                    uuid: uuid
+                },
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                method: 'POST',
+                params: {},
+                timestamp: timestamp
+            };
+            console.log('Payload:', JSON.stringify(payload));
 
             fetch(webhookUrl, {
                 method: 'POST',
